services/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: familiar-faces
spec:
  selector: { app: frontend }
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
